
  * Added a 10 band equalizer
  * Added a cache for last.fm queries and online images
  * Fixed crash in mpris when application send incomplete method calls
  * Fixed bug with library update when library paths changed
  * Allow to move items in playlists using dragging with mouse
  * Fixed bug with library paths. After remove a library path the files
    kept in the library.
  * Added drag&drop support to playlists and podcasts panels
  * Added option to search cover from the track editor image section
  * Removed mp4v2 library dependency
  * Removed taglib-extras as taglib now support most of the formats
  * Allow to load multiple files from file manager
  * Fixed a bug while dragging files over the playlist
  * Fixed the support to images in ogg files
  * Added a navigator in last.fm so you can go to the previous or next track
    info.
  * Fixed a bug in TrackEditor not saving alls changes made.
  * Changed Save to playlist allowing to append to existing playlist. You
    can select the playlist and where to append ( begin, end )
  * Added track counter in the status bar
  * Added Ukrainian language translation. Thanks  yupadmin at gmail dot com
  * Resizeable track editor. Remembers last position and size
  * Added gapless play support
  * Saved in config the showed/hidden panels
  * Added support to m3u, pls, xspf radio playlists
  * Added user defined radios
  * Fixed bug with cmake 2.8.0
  * Added posibility in progressbar to show counters instead of percent

2009-11-27 0.2.1
  * Fixed bug with lengths of the podcasts in some cases
  * The album sort by year only affects now to the Albums list box
  * Added option to change order of songs in the track editor
  * Fixed bug restoring saved position and current track index in playlist
  * Added reload button in lyrics and last.fm panels
  * Allow filters in the new podcasts dialog
  * Now can select from a podcast directory "digitalpodcast.com" when adding a new podcast