@@ -1,4 +1,5 @@
 
+  * Added a Limiter to the sound output
   * Added a 10 band equalizer
   * Added a cache for last.fm queries and online images
   * Fixed crash in mpris when application send incomplete method calls
